--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,7 @@ body.home {
   flex-direction: column;
   align-items: flex-end; /* Align rows to the right */
   gap: 2rem; /* Space between rows */
+  margin: 1rem auto; /* Bring the circles higher up */
   margin-top: 3rem;
   margin-right: 5%; /* Adjust right margin */
 }
