--- a/styles/style.css
+++ b/styles/style.css
@@ -26,8 +26,8 @@ body.dark-mode {
 }
 
 .dark-mode-button {
-  background-color: #4a4a4a;
-  color: white;
+  background-color: #fcfcfc;
+  color: rgb(124, 116, 116);
   border: none;
   padding: 0.5rem 1rem;
   font-size: 1rem;
@@ -38,7 +38,7 @@ body.dark-mode {
 }
 
 .dark-mode-button:hover {
-  background-color: #6a6a6a;
+  background-color: #fcfcfc;
 }
 
 /* הגדרות הכפתור הראשי */
@@ -53,7 +53,7 @@ body.dark-mode {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #4a4a4a;
+  background-color: #fcfcfc;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -85,7 +85,7 @@ body.dark-mode {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #4a4a4a;
+  background-color: #fcfcfc;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -95,7 +95,7 @@ body.dark-mode {
 }
 
 .settings-option:hover {
-  background-color: #6a6a6a;
+  background-color: #fcfcfc;
   transform: scale(1.1);
 }
 
