--- a/styles/style.css
+++ b/styles/style.css
@@ -388,6 +388,7 @@ body.dark-mode {
   z-index: 9999;
   width: 65px;
   height: 65px;
+  background-color: transparent;
   border-radius: 50%;
   bottom: 20px;
   left: 20px;
@@ -401,12 +402,17 @@ body.dark-mode {
   width: 150px;
   height: auto;
   padding: 10px;
-  background-color: #4a4a4a;
+  background-color: transparent;
 }
 
 .floating-container:hover .element-container .float-element {
   opacity: 1;
-  transform: translateY(0);
+  background-color: transparent;
+  transform: translateY(-70px);
+  -webkit-transform: translateY(-70px);
+  -moz-transform: translateY(-70px);
+  -ms-transform: translateY(-70px);
+  -o-transform: translateY(-70px);
 }
 
 .floating-button {
@@ -428,10 +434,11 @@ body.dark-mode {
 
 .element-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   align-items: center;
   gap: 15px;
-  margin-top: 10px;
+  position: relative;
+  bottom: 65px;
 }
 
 .float-element {
