--- a/styles/style.css
+++ b/styles/style.css
@@ -352,11 +352,16 @@ body.home {
 }
 
 .floating-container:hover .element-container .float-element:nth-child(1) {
+  opacity: 1;
+  transform: translateY(-70px);
   animation: come-in 0.4s forwards 0.2s;
 }
 
 .floating-container:hover .element-container .float-element:nth-child(2) {
+  opacity: 1;
   animation: come-in 0.4s forwards 0.4s;
+  transform: translateY(-140px);
+  -webkit-animation: come-in 0.4s forwards 0.4s;
 }
 
 /* main floating button */
@@ -386,8 +391,8 @@ body.home {
   flex-direction: column;
   align-items: center;
   gap: 15px;
-  bottom: 80px;
-  left: 12px;
+  bottom: 0;
+  left: 0;
 }
 
 /* individual elements */
@@ -401,14 +406,18 @@ body.home {
   justify-content: center;
   align-items: center;
   box-shadow: 0 10px 25px -5px rgba(232, 234, 234, 0.6);
-  opacity: 1;
-  transform: translateY(100px);
+  opacity: 0;
+  transform: translateY(0);
   transition: all 0.4s ease;
-  cursor: pointer; 
+  cursor: pointer;
   -webkit-transition: all 0.4s ease;
   -moz-transition: all 0.4s ease;
   -ms-transition: all 0.4s ease;
   -o-transition: all 0.4s ease;
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
 }
 
 .float-element img {
@@ -423,11 +432,11 @@ body.dark-mode {
 }
 
 body.dark-mode .floating-container .floating-button {
-  background: #333333;
+  background: #fcfafa;
 }
 
 body.dark-mode .float-element {
-  background: #333333;
+  background: #f5f5f5;
   box-shadow: 0 10px 25px -5px rgba(50, 50, 50, 0.6);
 }
 body {
