--- a/styles/style.css
+++ b/styles/style.css
@@ -284,53 +284,17 @@ body.home {
 
 
 /* floating button animations */
-@-webkit-keyframes come-in {
-  0% {
-    -webkit-transform: translateY(100px);
-    transform: translateY(100px);
-    opacity: 0;
-  }
-
-  30% {
-    -webkit-transform: translateX(-50px) scale(0.4);
-    transform: translateX(-50px) scale(0.4);
-  }
-
-  70% {
-    -webkit-transform: translateX(0px) scale(1.2);
-    transform: translateX(0px) scale(1.2);
-  }
-
-  100% {
-    -webkit-transform: translateY(0px) scale(1);
-    transform: translateY(0px) scale(1);
-    opacity: 1;
-  }
-}
-
 @keyframes come-in {
   0% {
-    -webkit-transform: translateY(100px);
     transform: translateY(100px);
     opacity: 0;
   }
-
-  30% {
-    -webkit-transform: translateX(-50px) scale(0.4);
-    transform: translateX(-50px) scale(0.4);
-  }
-
-  70% {
-    -webkit-transform: translateX(0px) scale(1.2);
-    transform: translateX(0px) scale(1.2);
-  }
-
   100% {
-    -webkit-transform: translateY(0px) scale(1);
-    transform: translateY(0px) scale(1);
+    transform: translateY(0);
     opacity: 1;
   }
 }
+
 
 /* floating container - move to bottom left */
 .floating-container {
@@ -429,6 +393,7 @@ body.home {
 body.dark-mode {
   background-color: #121212;
   color: #ffffff;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 body.dark-mode .floating-container .floating-button {
