--- a/styles/style.css
+++ b/styles/style.css
@@ -333,6 +333,7 @@ body.home {
   position: absolute;
   width: 65px;
   height: 65px;
+  z-index: 10;
   background: #ffffff;
   border-radius: 50%;
   display: flex;
@@ -363,6 +364,7 @@ body.home {
 .float-element {
   width: 50px;
   height: 50px;
+  z-index: 5;
   pointer-events: auto;
   border-radius: 50%;
   background: #ffffff;
