--- a/styles/style.css
+++ b/styles/style.css
@@ -318,7 +318,6 @@ body.home {
 .floating-container:hover .element-container .float-element:nth-child(1) {
   opacity: 1;
   transform: translateY(-70px);
-  z-index: 101;
   animation: come-in 0.4s forwards 0.2s;
   -webkit-transform: translateY(-70px);
   -moz-transform: translateY(-70px);
@@ -329,7 +328,6 @@ body.home {
 .floating-container:hover .element-container .float-element:nth-child(2) {
   opacity: 1;
   transform: translateY(-140px);
-  z-index: 102;
   animation: come-in 0.4s forwards 0.4s;
   -webkit-animation: come-in 0.4s forwards 0.4s;
 }
@@ -348,6 +346,7 @@ body.home {
   box-shadow: 0 10px 25px -5px rgba(232, 234, 234, 0.6);
   cursor: pointer;
   transition: all 0.3s;
+  z-index: 105;
 }
 
 .floating-button img {
@@ -358,38 +357,31 @@ body.home {
 /* element container */
 .element-container {
   position: absolute;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
   bottom: 0;
   left: 0;
 }
 
 /* individual elements */
 .float-element {
+  position: absolute;
   width: 50px;
   height: 50px;
-  z-index: 20;
-  pointer-events: auto;
-  border-radius: 50%;
   background: #ffffff;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: 0 10px 25px -5px rgba(232, 234, 234, 0.6);
+  cursor: pointer;
   opacity: 0;
   transform: translateY(0);
   transition: all 0.4s ease;
-  cursor: pointer;
-  -webkit-transition: all 0.4s ease;
-  -moz-transition: all 0.4s ease;
-  -ms-transition: all 0.4s ease;
-  -o-transition: all 0.4s ease;
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -ms-transform: translateY(0);
-  -o-transform: translateY(0);
+  z-index: 20
 }
 
 .float-element img {
