--- a/styles/style.css
+++ b/styles/style.css
@@ -299,7 +299,6 @@ body.home {
 /* floating container - move to bottom left */
 .floating-container {
   position: fixed;
-  z-index: 100;
   width: 65px;
   height: 65px;
   border-radius: 50%;
@@ -337,7 +336,7 @@ body.home {
   position: absolute;
   width: 65px;
   height: 65px;
-  z-index: 105;
+  z-index: 1;
   background: #ffffff;
   border-radius: 50%;
   display: flex;
@@ -381,7 +380,8 @@ body.home {
   opacity: 0;
   transform: translateY(0);
   transition: all 0.4s ease;
-  z-index: 20
+  left: 7.5px;
+  z-index: 2;
 }
 
 .float-element img {
