--- a/styles/style.css
+++ b/styles/style.css
@@ -299,6 +299,7 @@ body.home {
 /* floating container - move to bottom left */
 .floating-container {
   position: fixed;
+  z-index: 9999;
   width: 65px;
   height: 65px;
   border-radius: 50%;
@@ -316,19 +317,23 @@ body.home {
 
 .floating-container:hover .element-container .float-element:nth-child(1) {
   opacity: 1;
-  transform: translateY(-70px);
+  transform: translateY(-80px);
   animation: come-in 0.4s forwards 0.2s;
-  -webkit-transform: translateY(-70px);
-  -moz-transform: translateY(-70px);
-  -ms-transform: translateY(-70px);
-  -o-transform: translateY(-70px);
+  -webkit-transform: translateY(-80px);
+  -moz-transform: translateY(-80px);
+  -ms-transform: translateY(-80px);
+  -o-transform: translateY(-80px);
 }
 
 .floating-container:hover .element-container .float-element:nth-child(2) {
   opacity: 1;
-  transform: translateY(-140px);
+  transform: translateY(-160px);
   animation: come-in 0.4s forwards 0.4s;
   -webkit-animation: come-in 0.4s forwards 0.4s;
+  -webkit-transform: translateY(-160px);
+  -moz-transform: translateY(-160px);
+  -ms-transform: translateY(-160px);
+  -o-transform: translateY(-160px);
 }
 
 /* main floating button */
@@ -345,7 +350,7 @@ body.home {
   box-shadow: 0 10px 25px -5px rgba(232, 234, 234, 0.6);
   cursor: pointer;
   transition: all 0.3s;
-  z-index: 105;
+  z-index: 9999;
 }
 
 .floating-button img {
@@ -378,10 +383,14 @@ body.home {
   box-shadow: 0 10px 25px -5px rgba(232, 234, 234, 0.6);
   cursor: pointer;
   opacity: 0;
-  transform: translateY(0);
+  transform: translateY(100);
   transition: all 0.4s ease;
   left: 7.5px;
-  z-index: 2;
+  z-index: 0;
+  -webkit-transform: translateY(100);
+  -moz-transform: translateY(100);
+  -ms-transform: translateY(100);
+  -o-transform: translateY(100);
 }
 
 .float-element img {
