--- a/styles/ds.css
+++ b/styles/ds.css
@@ -155,3 +155,14 @@ body.dark-mode {
     transition: background-color 0.5s ease, color 0.5s ease;
   }
   
+
+  #stackCanvas {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    height: 500px;
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
