--- a/styles/ds.css
+++ b/styles/ds.css
@@ -63,29 +63,15 @@ body.ds {
     font-weight: bold;
   }
   
-  .visualization {
-    text-align: center;
-  }
-  
-  #stackCanvas {
-    display: block;
-    margin: 0 auto;
-    width: 100%;
-    height: 500px;
-    background-color: #e9ecef74;
-    border: 4px solid #00ffcc;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
   /* Visualization Section */
-  /* .visualization canvas {
+  .visualization canvas {
     border: 4px solid #00ffcc;
     background: #e9ecef74;
     margin: 1rem auto;
     display: block;
     width: 500px;
     height: 300px;
-  } */
+  } 
 
   
   .controls {
@@ -103,7 +89,6 @@ body.ds {
     border: 2px solid rgba(255, 255, 255, 0.3);
     box-shadow: 0 0 8px rgba(39, 194, 250, 0.787), 0 0 15px rgba(39, 194, 250, 0.5);
     border-radius: 5px;
-    transition: box-shadow 0.3s ease;
   }
   
   .controls button:hover {
