--- a/styles/ds.css
+++ b/styles/ds.css
@@ -77,6 +77,7 @@ body.ds {
   .controls {
     text-align: center;
     margin-top: 1rem;
+    margin: 10px 0;
   }
   
   .controls button {
@@ -176,4 +177,14 @@ body.ds {
     border-radius: 5px;
     position: absolute;
     left: 10%;
+  }
+
+  .visualization {
+    text-align: center;
+  }
+
+  .pointer {
+    font-size: 14px;
+    color: #333;
+    font-family: Arial, sans-serif;
   }
