--- a/styles/ds.css
+++ b/styles/ds.css
@@ -159,24 +159,25 @@ body.ds {
   
   .stack-container {
     width: 100%;
-    height: 300px;
+    height: 150px;
     border: 2px solid #3498db;
     background-color: #e9ecef;
     position: relative;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .stack-element {
-    width: 80%;
-    height: 40px;
-    margin: 5px auto;
+    width: 40px;
+    height: 80%;
+    margin: 0 5px;
     background-color: #3498db;
     color: white;
     text-align: center;
     line-height: 40px;
     border-radius: 5px;
-    position: absolute;
-    left: 10%;
   }
 
   .visualization {
@@ -191,8 +192,8 @@ body.ds {
 
   .pointer-table {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 10px;
+    right: 10px;
     font-family: 'Montserrat', sans-serif;
   }
   
@@ -214,4 +215,4 @@ body.ds {
     background: #f4f4f4;
     font-weight: bold;
   }
-  
+
