--- a/styles/ds.css
+++ b/styles/ds.css
@@ -78,6 +78,15 @@ body.ds {
     text-align: center;
     margin-top: 1rem;
   }
+
+  .controls input {
+    width: 150px;
+    padding: 0.5rem;
+    margin-right: 0.5rem;
+    font-size: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+  }
   
   .controls button {
     margin: 0.5rem;
@@ -157,26 +166,27 @@ body.ds {
   }
   
   .stack-container {
-    width: 90%;
-    height: 150px;
+    width: 200px;
+    height: 300px;
     border: 2px solid #3498db;
     background-color: #e9ecef;
     position: relative;
     overflow: hidden;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: flex-end;
   }
   
   .stack-element {
-    width: 40px;
-    height: 100px;
-    margin-right: 10px;
+    width: 80%;
+    height: 40px;
+    margin-bottom: 5px;
     background-color: #3498db;
     color: white;
     text-align: center;
-    line-height: 100px;
+    line-height: 40px;
     border-radius: 5px;
     font-family: 'Montserrat', sans-serif;
   }
@@ -216,4 +226,3 @@ body.ds {
     background: #f4f4f4;
     font-weight: bold;
   }
-
