--- a/styles/stack.css
+++ b/styles/stack.css
@@ -11,6 +11,16 @@ body.stack {
     margin-top: 20px;
   }
   
+  #visCanvas {
+    display: block;
+    margin: 0 auto;
+    width: 500%;
+    height: 400px;
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
   canvas {
     border: 2px solid #6c9cf3;
     background-color: #eef2f7d8;
